Hero Section: html markup

--- a/css/general.css
+++ b/css/general.css
@@ -48,6 +48,10 @@ Medium: 11px
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     font-family: sans-serif;
     line-height: 1;
