--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
     display: inline-block;
     background-color: #e67e22;
     font-size: 2rem;
+    font-weight: 600;
     color: #fff;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
@@ -67,4 +68,37 @@
 
 .mr-sm {
     margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+    display: flex;
+    margin-top: 8rem;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.delivered-imgs {
+    display: flex;
+}
+
+.delivered-imgs img {
+    height: 4.8rem;
+    width: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+    border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+    margin: 0;
+}
+
+.delivered-text {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.delivered-text span {
+    color: #cf711f;
+    font-weight: 700;
 }
