--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,19 @@
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
+
+.logo {
+    height: 2.2rem;
+}
+
 .section-hero {
     background-color: #fdf2e9;
-    padding: 9.6rem;
+    padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
@@ -9,6 +22,7 @@
     max-width: 130rem;
     grid-template-columns: 1fr 1fr;
     gap: 9.6rem;
+    padding: 0 3.2rem;
 }
 
 .heading-primary {
