--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 0 3.2rem;
+}
+
+.grid {
+    display: grid;
+    gap: 9.6rem;
+}
+
+.grid--2-cols {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+    grid-template-columns: repeat(4, 1fr);
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -151,4 +174,9 @@
 .delivered-text span {
     color: #cf711f;
     font-weight: 700;
+}
+
+.section-how {
+    padding: 9.6rem 0;
+    background: orangered;
 }
