--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 
 .grid {
     display: grid;
-    gap: 9.6rem;
+    row-gap: 9.6rem;
+    column-gap: 6.4rem;
 }
 
 .grid--2-cols {
@@ -19,6 +20,10 @@
 
 .grid--4-cols {
     grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--center-v {
+    align-items: center;
 }
 
 .header {
@@ -85,7 +90,8 @@
 }
 
 .heading-primary,
-.heading-secondary {
+.heading-secondary,
+.heading-tertiary {
     font-weight: 700;
     color: #333;
     letter-spacing: -0.5px;
@@ -104,6 +110,12 @@
     font-size: 4.4rem;
     line-height: 1.2;
     margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+    font-size: 3rem;
+    line-height: 1.2;
+    margin-bottom: 3.2rem;
 }
 
 .subheading {
@@ -203,6 +215,51 @@
     padding: 9.6rem 0;
 }
 
+.step-number {
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;
+    margin-bottom: 1.2rem;
+}
+
+.step-description {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.step-img-box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
+.step-img-box::before {
+    width: 60%;
+    /*height: 60%;*/
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    z-index: -2;
+}
+
+.step-img-box::after {
+    width: 45%;
+    padding-bottom: 45%;
+    background-color: #fae5d3;
+    z-index: -1;
+}
+
 .step-img {
-    width: 50%;
+    width: 35%;
 }
